--- a/contract-provisions.html
+++ b/contract-provisions.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="ja" lang="ja">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Synergy!-API契約規定</title>
+<title>Synergy! データベースAPI契約規定</title>
 <meta name="SKYPE_TOOLBAR" content="SKYPE_TOOLBAR_PARSER_COMPATIBLE" />
 <link rel="shortcut icon" href="https://www.crmstyle.com/formparts_apply/img/favicon.ico" />
 <link rel="stylesheet" href="./css/layout.css" type="text/css" media="all" id="css" />
