仕様書を参照するように修正

--- a/contract-provisions.html
+++ b/contract-provisions.html
@@ -88,7 +88,7 @@
               <h3 class="ttl03 mb10">第５条</h3>
               <p>本サービスをご利用いただく場合は、弊社の指定した本条記載の利用制限に抵触しない範囲内で利用するものとします。なお、利用制限に反する利用等、弊社がクラウドサービスSynergy!の提供に相当の支障があると判断した場合は、弊社はアクセス制限や機能自体の停止等の処置を行うことができるものとします。<br></p>
               <div style="margin-left:15px;">
-                <p>①1秒あたりのリクエスト回数クラウドサービスSynergy!の1契約単位からのリクエスト回数が1秒あたり50回を超えるような利用方法<br>
+                <p>①1秒あたりのリクエスト回数　<a href="https://docs.synergy-marketing.co.jp/dbapi-reference/api-reference#section/%E3%81%AF%E3%81%98%E3%82%81%E3%81%AB/%E3%83%AA%E3%82%AF%E3%82%A8%E3%82%B9%E3%83%88%E6%95%B0%E5%88%B6%E9%99%90" target="_blank">データベースAPI仕様書</a>で定めるリクエスト数上限を超えるような利用方法<br>
                 ②同一リクエストの繰り返し　1分程度の短時間の間に同じリクエストを何度も繰り返すような利用方法<br>
                 ③大量データの登録　10万件を超えるデータの登録を数時間に渡って継続するような利用方法<br></p>
               </div>
@@ -113,7 +113,7 @@
                   <li> 第三者の故意又は過失に起因する中断・障害</li>
                   <li>停電、火災、地震、労働争議等の利用者、弊社いずれの責にも帰しがたい事由に起因する中断・障害</li>
                 </ol>
-                <p>⑤前４号の他、データベースAPI仕様書で弊社の責任と明記されていない事項<br></p>
+                <p>⑤前４号の他、<a href="https://docs.synergy-marketing.co.jp/dbapi-reference/api-reference" target="_blank">データベースAPI仕様書</a>で弊社の責任と明記されていない事項<br></p>
               </div>
               <p>２．前項に定める本サービスの対象外の事項について、利用者が弊社にサービスの提供を求める場合、その提供条件について両者で別途協議し、両者の書面による合意をもって実施します。<br>
               <p>３．本サービスの対象外の事項に起因して、又は利用者の希望により、弊社が以下の各号に定める行為を実施する必要がある場合、これに要する費用は利用者の負担とします。<br></p>
@@ -216,7 +216,7 @@
                 <p>①本システムの保守点検等の作業を定期的に又は緊急に行う場合<br>
                 ②本システムに故障等が生じた場合<br>
                 ③停電、火災、地震、労働争議その他弊社の責に帰すべからざる事由により本サービスの提供が困難な場合<br>
-                ④利用者がデータベースAPI仕様書の記載に反する利用がなされるなどの事由により、弊社が本サービスの維持・運用において利用者の利用方法に問題があると判断した場合<br>
+                ④利用者が<a href="https://docs.synergy-marketing.co.jp/dbapi-reference/api-reference" target="_blank">データベースAPI仕様書</a>の記載に反する利用がなされるなどの事由により、弊社が本サービスの維持・運用において利用者の利用方法に問題があると判断した場合<br>
                 ⑤前各号他本システムの運用上又は技術上の相当な理由がある場合<br></p>
               </div>
               <p>３．天災地変その他の不可抗力により、本システムの全部もしくは一部が滅失し又は破損し、本システムの使用が不可能となり、かつ、修復の見込みがない場合、弊社はその旨を利用者に通知して本契約を解約することができます。<br></p>
