API技術サポートのメールアドレスを変更

--- a/contract-provisions.html
+++ b/contract-provisions.html
@@ -92,7 +92,7 @@
                 ②同一リクエストの繰り返し　1分程度の短時間の間に同じリクエストを何度も繰り返すような利用方法<br>
                 ③大量データの登録　10万件を超えるデータの登録を数時間に渡って継続するような利用方法<br></p>
               </div>
-              <p>２．本サービスに関する問い合わせは、<a href="https://upgb.f.msgs.jp/webapp/form/22042_upgb_1/index.do" target="_blank">API技術サポートお問い合わせフォーム</a>または<a href="mailto:api-support@i.msgs.jp">メール</a>での問い合わせのみとし、またその内容は本サービスの機能仕様、又は稼働状況の確認に限定するものとします。<br></p>
+              <p>２．本サービスに関する問い合わせは、<a href="https://upgb.f.msgs.jp/webapp/form/22042_upgb_1/index.do" target="_blank">API技術サポートお問い合わせフォーム</a>または<a href="mailto:api-tech-support@synergy101.jp">メール</a>での問い合わせのみとし、またその内容は本サービスの機能仕様、又は稼働状況の確認に限定するものとします。<br></p>
             </div>
           </div>
         <!-- /.section --></div>
