契約規定を改定

--- a/contract-provisions.html
+++ b/contract-provisions.html
@@ -332,11 +332,13 @@
             <div class="mb20">
               <h3 class="ttl03 mb10">第22条</h3>
               <p>バッチ処理を前提とした本サービスの利用を禁じます。<br></p>
+              <p>但し、弊社が所定の書面によりこれを許可した場合は、本条の対象となりません。<br></p>
             </div>
           </div>
         <!-- /.section --></div>
       </section>
       <div align="right" class="small">2020年05月26日 制定<br />
+      <div align="right" class="small">2021年09月10日 改定<br />
       <!-- /#main --></div>
     <!-- /#content --></div>
   <div id="footer">
